# breadboard

./: .gitignore  Makefile  README.md  build_package_list.py  main.py  package.json  pyproject.toml
breadboard/: api.py  base.py  button.py  devices.py  environment.py  event_actions.py  fan.py  lcd.py  led.py  logging.py  matrix.py  network.py  rotary_encoder.py  serial.py  switch.py
pico_enclosure/: __init__.py  air_quality.py  api.py  base.py  devices.py  environment.py  fan.py  led.py  led_strip.py  logging.py  loop.py  network.py
tests/: test_air_quality.py  test_api.py  test_environment.py  test_fan.py  test_led.py  test_led_strip.py  test_network.py
